fixed button problem on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -339,10 +339,7 @@ h2.sec-heading {
 @media screen and (max-width:576px) {
 
 
-    body{
-        max-width: 90%;
-        margin: 0 auto;
-    }
+   
     .nav-list ul{
         grid-template-columns: repeat(1,1fr);
     }
@@ -379,8 +376,8 @@ h2.sec-heading {
 }
 .btn-part {
     position: absolute;
-    right: 30%;
-    bottom: -6%;
+    right: 10%;
+    bottom: -3%;
 
     padding: 25px 35px;
     border-radius: 10px;
